--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         <script src="<%=js%>"></script>
       <% } %>
     <% } %>
-    <title>田丁服务app</title>
+    <title>vue-mobile-ui</title>
   </head>
   <body>
     <noscript>
